--- a/recorderjs/examples/index.html
+++ b/recorderjs/examples/index.html
@@ -24,7 +24,7 @@
   
   <h2>Log</h2>
   <pre id="log"></pre>
-  <script type="text/javascript" src="../dist/jquery.min.js"></script>
+  <script type="text/javascript" src="./jquery.min.js"></script>
   <script>
   function __log(e, data) {
     log.innerHTML += "\n" + e + " " + (data || '');
@@ -119,6 +119,6 @@
   };
   </script>
 
-  <script src="../dist/recorder.js"></script>
+  <script src="./recorder.js"></script>
 </body>
 </html>
