wxlogin 广告位修改

--- a/vue2x/wxlogin/index.html
+++ b/vue2x/wxlogin/index.html
@@ -52,6 +52,11 @@
               </li>
               {{/each}}
             </ul>
+            <div class="dot">
+              {{each imgs as val idx}}
+                <span></span>
+              {{/each}}
+            </div>
           </div>
           {{each imgs1 as val idx}}
           <div class="slide" id="slideImgs{{idx}}">
