--- a/oss/index.html
+++ b/oss/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>oss后台</title>
     <link href="http://file.yunxingzh.com/js/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
+    <!--link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css"-->
   </head>
   <body>
     <div id="app"></div>
