--- a/vue2x/wx/wifibussiness/index.html
+++ b/vue2x/wx/wifibussiness/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <meta name="format-detection" content="telephone=no, email=no">
     <title>WIFI业务</title>
+    <script src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
+    <script src="http://wxdev.yunxingzh.com//pay/get_jsapi_sign" charset="utf-8"></script> 
   </head>
   <body>
     <div id="app"></div>
