--- a/vue2x/wxlogin/index.html
+++ b/vue2x/wxlogin/index.html
@@ -42,7 +42,7 @@
     <script type="text/html" id="tplOnelogin">
       <div class="login-view first-view">
         {{if imgs.length>0}}
-          <div class="slide" id="slide0">
+          <!--div class="slide" id="slide0">
             <ul>
               {{each imgs as val idx}}
               <li>
@@ -57,17 +57,17 @@
                 <span></span>
               {{/each}}
             </div>
-          </div>
-          {{each imgs1 as val idx}}
-          <div class="slide" id="slideImgs{{idx}}">
-            <ul>
-              <li>
-                <a href="javascript:;">
-                  <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAADsQAAA7EAZUrDhsAAAANSURBVBhXYzh8+PB/AAffA0nNPuCLAAAAAElFTkSuQmCC" data-src={{val.img}} alt="">
-                  </a>
-              </li>
-            </ul>
-          </div>
+          </div-->
+          {{each imgs as val idx}}
+            <div class="slide">
+              <ul>
+                <li>
+                  <a href="javascript:;">
+                    <img src="{{val.img}}" data-src={{val.img}} alt="">
+                    </a>
+                </li>
+              </ul>
+            </div>
           {{/each}}
           {{else}}
           <div class="login-top">
@@ -80,7 +80,7 @@
         </div>
       </div>
       <div class="login-view min5-view">
-        {{each imgs2 as img2 idx}}
+        <!-- {{each imgs2 as img2 idx}}
         <div class="slide" id="slideview{{idx}}">
           <ul>
             <li>
@@ -90,7 +90,7 @@
             </li>
           </ul>
         </div>
-        {{/each}}
+        {{/each}} -->
         <div class="oneclick-bottom">
           <button class="btn wx-btn min5-btn"><img class="btn-img-wechat" src="images/ico_wechat.png"><span class="btn-text"></span></button>
           <span class="oneclick-bottom-text">服务热线：0769-21660569</span>
