commit for test

--- a/video/index.html
+++ b/video/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>video</title>
-    <script type="text/javascript" src="./static/ckplayer.min.js"></script>
+    <link rel="stylesheet" href="./static/css/font-awesome.min.css">
+    <script type="text/javascript" src="./static/isMobile.js"></script>
+    <script type="text/javascript" src="./static/xplayer.js"></script>
   </head>
   <body>
     <div id="app"></div>
